--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -20,6 +20,31 @@ button,
   background-color: #1677ff;
 }
 
+// font text
+.great-vibes {
+  font-family: "Great Vibes", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.ms-madi {
+  font-family: "Ms Madi", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.windsong {
+  font-family: "WindSong", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.alex-brush {
+  font-family: "Alex Brush", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 
 // css
 .cloudContainer {
