--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -178,3 +178,36 @@ button,
 .gm-fullscreen-control {
   display: none;
 }
+
+.ping {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.ping::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 179, 225, 0.7);
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  animation: ping 1.5s infinite ease-out;
+}
+
+@keyframes ping {
+  0% {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(1.8);
+    opacity: 0;
+  }
+}
